full-landing-page-desktop-only

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="product-list overflow">
             <div class="product-item">
-                <img src="./assets/image_13_prev_ui 1.png" alt="">
+                <img src="./assets/image_13_prev_ui_1.png" alt="">
                 <p>Shop our Best Sellers</p>
                 <p>Lorem ipsum dolor sit amet consectetur. Ullamcorper ipsum varius lorem blandit lectus magnis feugiat.</p>
                 <button>View All</button>
@@ -118,7 +118,7 @@
             <div class="product-list-item">
                 <div class="product-details">
                     <div class="product-images">
-                        <img src="./assets/image_12_prev_ui 1.png" alt="">
+                        <img src="./assets/image_12_prev_ui_1.png" alt="">
                     </div>
                     <p>FLOWER</p>
                     <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="product-details">
                     <div class="product-images">
-                        <img src="./assets/image_13_prev_ui 1 item.png" alt="">
+                        <img src="./assets/image_13_prev_ui_1_item.png" alt="">
                     </div>
                     <p>CONCENTRATES</p>
                     <p>Mix And Match Shatter/Budder 28g (4 X 7G)</p>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="product-details">
                     <div class="product-images">
-                        <img src="./assets/image_12_prev_ui 1 item.png" alt="">
+                        <img src="./assets/image_12_prev_ui_1_item.png" alt="">
                     </div>
                     <p>FLOWER</p>
                     <p>2 Oz Deal Ahi Tuna + Master 
@@ -343,7 +343,7 @@
         <article class="product-grid">
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -373,7 +373,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -403,7 +403,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -433,7 +433,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -463,7 +463,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -493,7 +493,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -523,7 +523,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -553,7 +553,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -684,7 +684,7 @@
         <article class="product-grid-1-row">
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -714,7 +714,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -744,7 +744,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -774,7 +774,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui_1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -883,21 +883,65 @@
         </div>
         <div class="about-us">
             <div class="about-us-content">
-                <img src="" alt="Top Shelf BC Logo">
-                <p>#1 Canadian top rated online dispensary that meets the customers needs in every single medical marijuana aspect. The team here at TopShelfBC is heavily involved in the Canadian cannabis industry for over 15 years...</p>
+                <img src="./assets/Logo.svg" alt="Top Shelf BC Logo">
+                <p>#1 Canadian top rated online dispensary that meets the customers needs in every single medical marijuana aspect. The team here at TopShelfBC is heavily involved in the Canadian cannabis industry for over 15 years. We strive to provide the top quality products, service and care at the lowest prices you’ll ever find.</p>
             </div>
-            <h3>QUICK LINK</h3>
-            <div class="quick-links">
-                <ul class="quick-links-list">
-                    <li>Track Your Order</li>
-                    <!-- ... Other quick links ... -->
-                </ul>
-                <ul class="quick-links-list">
-                    <li>Mushrooms</li>
-                    <!-- ... Other quick links ... -->
-                </ul>
+            <div class="link-content">
+                <h3>QUICK LINK</h3>
+                <div class="quick-links">
+                    <ul class="quick-links-list">
+                        <li>Track Your Order</li>
+                        <li>Shop All</li>
+                        <li>Flower</li>
+                        <li>Edibles</li>
+                        <li>Concentrates</li>
+                        <li>Refunds</li>
+                    </ul>
+                    <ul class="quick-links-list">
+                        <li>Mushrooms</li>
+                        <li>Promotions / Bundles</li>
+                        <li>Support</li>
+                        <li>Reward</li>
+                        <li>Blog</li>
+                        <li>Shipping Faq</li>
+                    </ul>
+                </div>
+                <h3>CONTACT US</h3>
+                <p>info@topshelfbc.cc</p>
+                <h3>MORE</h3>
+                <div class="quick-links">
+                    <ul class="quick-links-list">
+                        <li>Buy weed online in Canada</li>
+                        <li>Buy weed online in New Brunswick</li>
+                        <li>Buy weed online in Prince Edward Island</li>
+                        <li>Buy weed online in Northwest Territories</li>
+                        <li>Buy weed online in Saskatchewan</li>
+                    </ul>
+                    <ul class="quick-links-list">
+                        <li>Buy weed online in Manitoba</li>
+                        <li>Buy weed online in Quitebec</li>
+                        <li>Buy weed online in British Columbia</li>
+                        <li>Buy weed online in Ontario</li>
+                        <li>Buy weed online in Alberta</li>
+                    </ul>
+                </div>
+                <div class="mastercard">
+                    <img src="./assets/mastercard.svg" alt="">
+                    <img src="./assets/visa.svg" alt="">
+                    <img src="./assets/bitcoin.png" alt="">
+                    <img src="./assets/mastercard_int.svg" alt="">
+                </div>
             </div>
-            <!-- ... Other content ... -->
+        </div>
+        <div class="footer">
+            <div class="footer-content">
+                <p>© 2022 Top Shelf BC. All Rights Reserved. </p>
+            </div>
+            <ul class="footer-links">
+                <li>Out Of Stock</li>
+                <li>Privacy Policy</li>
+                <li>Terms & Conditions</li>
+            </ul>
         </div>
     </section>    
 </body>
