--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="header-content mg-lk">
                 <div class="logo">
-                    <img src="./assets/Logo.png" alt="TOP SHELF">
+                    <a href="./index.html"><img src="./assets/Logo.png" alt="TOP SHELF"></a>
                 </div>
                 <div class="search-bar">
                     <input type="text" name="search" id="search" placeholder="Search">
@@ -679,7 +679,7 @@
             <button>Mushrooms</button>
             <button>Concentrate</button>
             <button>Edibles</button>
-            <button>Shop All W33d</button>
+            <button href="./category.html">Shop All W33d</button>
         </div>
         <article class="product-grid-1-row">
             <div class="card-product">
