add discount Time

--- a/category.html
+++ b/category.html
@@ -10,7 +10,7 @@
     <header>
         <div id="discount">
             <p>LIMITED OFFER: 30% OFF. Use RABBIT30 at Checkout.</p>
-            <p>23 : 15 : 00</p>
+            <p>00 : 00 : 00</p>
         </div>
         <div class="container">
             <div class="header-content mg-lk">
@@ -47,16 +47,16 @@
             </ul>
         </nav>
     </header>
-    <section class="feature-section">
-        <div class="feature-block">
+    <section class="cat-feature-section">
+        <div class="cat-feature-block">
             <img src="./assets/truck-fast.png" alt="Reliable Shipping">
             <p>Reliable Shipping</p>
         </div>
-        <div class="feature-block">
+        <div class="cat-feature-block">
             <img src="./assets/safe-home.png" alt="You’re Safe With Us">
             <p>You’re Safe With Us</p>
         </div>
-        <div class="feature-block">
+        <div class="cat-feature-block">
             <img src="./assets/coin.png" alt="Best Quality & Pricing">
             <p>Best Quality & Pricing</p>
         </div>
@@ -168,6 +168,7 @@
                 <li>Terms & Conditions</li>
             </ul>
         </div>
-    </section>   
+    </section> 
+    <script src="./discTime.js"></script>  
 </body>
 </html>
