--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div id="discount">
             <p>LIMITED OFFER: 30% OFF. Use RABBIT30 at Checkout.</p>
-            <p>23 : 15 : 00</p>
+            <p>00 : 00 : 00</p>
         </div>
         <div class="container">
             <div class="header-content mg-lk">
@@ -943,6 +943,7 @@
                 <li>Terms & Conditions</li>
             </ul>
         </div>
-    </section>    
+    </section>
+    <script src="./discTime.js"></script>    
 </body>
 </html>
